--- a/finances/src/main/webapp/WEB-INF/web.xml
+++ b/finances/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,31 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+    
+    
+     <welcome-file-list>
+    <welcome-file>guestbook</welcome-file>
+  </welcome-file-list>
+
+  
     <servlet>
+        <servlet-name>finances</servlet-name>
+        <servlet-class>
+            org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>finances</servlet-name>
+        <url-pattern>/guestbook</url-pattern>
+        <url-pattern>/sign</url-pattern>
+        <url-pattern>/upload</url-pattern>
+    </servlet-mapping>
+    
+
+    
+    
+    <!-- <servlet>
         <servlet-name>sign</servlet-name>
         <servlet-class>com.example.guestbook.SignGuestbookServlet</servlet-class>
     </servlet>
@@ -12,7 +36,7 @@
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>guestbook.jsp</welcome-file>
-    </welcome-file-list>
+    </welcome-file-list>-->
     <filter>
         <filter-name>ObjectifyFilter</filter-name>
         <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
@@ -22,6 +46,6 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <listener>
-        <listener-class>com.example.guestbook.OfyHelper</listener-class>
-    </listener>
+        <listener-class>com.kinicky.finances.OfyHelper</listener-class>
+    </listener> 
 </web-app>
