--- a/finances/pom.xml
+++ b/finances/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.kinicky.finances</groupId>
     <artifactId>finances</artifactId>
     <properties>
-        <app.id>finances</app.id>
+        <app.id>pa-finances</app.id>
         <app.version>1</app.version>
         <appengine.version>1.9.27</appengine.version>
         <gcloud.plugin.version>2.0.9.74.v20150814</gcloud.plugin.version>
